# RAVTI

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  fishnet.yaml  inaturalist.yaml
scripts/: build_curated_baseline_subset.py  build_retrieval_index.py  enrich_inat_checklist_class_index.py  eval_ravti.py  export_inaturalist_gallery_jsonl.py  prepare_dataset_pipeline.py  run_sweep.py  train_cas_classifier.py  train_ravti.py
src/ravti/: __init__.py  config.py  paths.py  taxonomy_text.py
src/ravti/data/: __init__.py  build.py  local_imagefolder.py  metadata_store.py  streaming_datasets.py
src/ravti/data/providers/: __init__.py  fishnet.py  inaturalist.py  treeoflife.py
src/ravti/encoders/: __init__.py  bioclip2_visual.py  bioclip_taxon.py  semantic_sdxl.py
src/ravti/eval/: __init__.py  benchmark.py  cas_metric.py  classification_accuracy.py  image_quality.py  semantic_metric.py  species_checklist.py  t2i_alignment.py
src/ravti/experiments/: __init__.py  smoke.py
src/ravti/models/: __init__.py  decoupled_attention.py  projections.py  reliability.py  triple_stream_conditioning.py
src/ravti/retrieval/: __init__.py  bio_retrieval.py  faiss_index.py
src/ravti/training/: __init__.py  sdxl_adapter_trainer.py  train_loop.py
src/ravti/utils/: __init__.py
