[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ravti"
version = "0.1.0"
description = "Reliability-Aware Visual-Taxonomic Injection (RAVTI) research scaffold"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
